// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FooterLinks - Snapshots > matches snapshot with complex children 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground"
  data-testid="typography"
>
  <span>
    Copyright 2024
  </span>
   | 
  <a
    href="/privacy"
  >
    Privacy
  </a>
</p>
`;

exports[`FooterLinks - Snapshots > matches snapshot with custom className 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground custom-footer"
  data-testid="typography"
>
  Custom footer
</p>
`;

exports[`FooterLinks - Snapshots > matches snapshot with data-testid prop 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground"
  data-testid="custom-footer-links"
>
  Footer with test ID
</p>
`;

exports[`FooterLinks - Snapshots > matches snapshot with default props 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground"
  data-testid="typography"
>
  Footer text
</p>
`;

exports[`FooterLinks - Snapshots > matches snapshot with empty children 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground"
  data-testid="typography"
/>
`;

exports[`FooterLinks - Snapshots > matches snapshot with id prop 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground"
  data-testid="typography"
  id="footer-id"
>
  Footer with ID
</p>
`;

exports[`FooterLinks - Snapshots > matches snapshot with simple text 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground"
  data-testid="typography"
>
  Simple text
</p>
`;
